RESULTS/AutoSpec/raw_results/out-4o-sv-comp/0011_0011/0011_merged.txt
/home/yangfp/AutoSpec/AutoSpec1/out/0011_0011/0011_merged.c:37:3: error: unterminated comment
   37 |   /*@;
      |   ^
